# CMPS14

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  cmps14_heading.cpp  cmps14_i2c_heading.cpp  cmps14_i2c_init.cpp  cmps14_i2c_pitch.cpp  cmps14_i2c_roll.cpp  cmps14_init.cpp  cmps14_serial_heading.cpp  cmps14_serial_init.cpp
examples/i2c/: CMakeLists.txt  cmps14_i2c_cal.cpp  cmps14_i2c_init.cpp
examples/serial/: CMakeLists.txt  cmps14_serial_cal.cpp  cmps14_serial_orientation.cpp  cmps14_serial_pitch.cpp  cmps14_serial_roll.cpp
include/cmps14/: cmps14.hpp
src/: cmps14.cpp
