add_executable(cmps14SerialHeadingTest cmps14_serial_heading.cpp)
target_link_libraries(cmps14SerialHeadingTest PRIVATE cmps14)

add_executable(cmps14SerialInitTest cmps14_serial_init.cpp)
target_link_libraries(cmps14SerialInitTest PRIVATE cmps14)

add_executable(cmps14SerialPitchTest cmps14_serial_pitch.cpp)
target_link_libraries(cmps14SerialPitchTest PRIVATE cmps14)

add_executable(cmps14SerialRollTest cmps14_serial_roll.cpp)
target_link_libraries(cmps14SerialRollTest PRIVATE cmps14)

add_executable(cmps14SerialOrientationTest cmps14_serial_orientation.cpp)
target_link_libraries(cmps14SerialOrientationTest PRIVATE cmps14)

add_executable(cmps14SerialCalTest cmps14_serial_cal.cpp)
target_link_libraries(cmps14SerialCalTest PRIVATE cmps14)